memoscontrollerを追加
